--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
 
 <body>
     <h1>Odin Recipest</h1>
-    <a href="./recipes/Tri-Tip.html">Tri-Tip</a>
+    <ul>
+        <li> <a href="./recipes/Tri-Tip.html">Tri-Tip</a></li>
+        <li><a href="./recipes/Beer_can_chicken.html">Beer can chicken</a></li>
+        <li> <a href="./recipes/Hot_dogs.html">Hot dogs</a></li>
+    </ul>
+
+
+
 </body>
 
 </html>
