finished recipe page commit

--- a/recipes/Tri-Tip.html
+++ b/recipes/Tri-Tip.html
@@ -10,6 +10,31 @@
 
 <body>
     <h1>Tri-Tip</h1>
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F-0001%2F11%2F30%2F1652733217Grilled20Sirloin20Tri20Tip.jpeg&q=60"
+        alt="Picture of Tri Tip" width="120">
+    <h2>Discription</h2>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni quaerat, eligendi cumque facere, velit maxime
+        ipsa quia atque, ipsum asperiores quidem accusamus reprehenderit distinctio dignissimos nihil fugit quibusdam
+        tempore fuga.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur vero, harum et eum ullam, nostrum
+        reprehenderit incidunt possimus soluta vitae laborum, aperiam cumque quae porro aliquid est nam cum illum!</p>
+    <h3>Ingrediants</h3>
+    <ul>
+        <li>1/2 cup balsamic vinaigrette</li>
+        <li>1 tbsp Worcestershire Sauce</li>
+        <li>1 tsp Dijon mustard</li>
+        <li>1/2 medium Lime</li>
+        <li>1 tbsp black pepper</li>
+        <li>1 1/2B pound Tri Tip</li>
+    </ul>
+    <h3>Instructions</h3>
+    <ol>
+        <li>Combine ingrediates for marinade</li>
+        <li>Liberally marinade Tri Tip for at least 8 hours refrigerated</li>
+        <li>Preheat grill to 225 degrees</li>
+        <li>Cook to an internal temperature of 135 degrees and remove from grill</li>
+        <li>let rest 15 minutes, cut, serve, and enjoy</li>
+    </ol>
 </body>
 
 </html>
